--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-mapbox-gl": "^4.8.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-vertical-timeline-component": "^3.0.2",
     "turf": "^3.0.14"
   },
   "scripts": {
