--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-pure-loaders": "^3.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinner-material": "^1.3.1",
     "react-vertical-timeline-component": "^3.0.2",
     "turf": "^3.0.14",
     "uuid": "^8.1.0"
